[gd_scene load_steps=14 format=3 uid="uid://bk4vr5p2qjdnm"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_nx22a"]
[ext_resource type="AudioStream" uid="uid://cqkkawxoeegx" path="res://audio/player/footsteps.wav" id="2_cwe81"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0mr4d"]
radius = 0.3
height = 1.7

[sub_resource type="Animation" id="Animation_nrp0w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.74, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Celling_check:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.454767, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Collision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Collision/Head/Head_bob/Camera:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_25yyb"]
resource_name = "crouch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.7, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.740064, 0), Vector3(0, 0.4, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.35, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wcdns"]
_data = {
"RESET": SubResource("Animation_nrp0w"),
"crouch": SubResource("Animation_25yyb")
}

[sub_resource type="Animation" id="Animation_emhc5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collision/Head/Head_bob:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_r5uap"]
resource_name = "walk"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collision/Head/Head_bob:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_byuny"]
_data = {
"RESET": SubResource("Animation_emhc5"),
"walk": SubResource("Animation_r5uap")
}

[sub_resource type="Animation" id="Animation_dcj65"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Collision/Head/Head_bob/Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Collision/Head/Head_bob/Camera:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1aapa"]
resource_name = "left_tilt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Collision/Head/Head_bob/Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.1, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Collision/Head/Head_bob/Camera:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.0174533)]
}

[sub_resource type="Animation" id="Animation_vo3n4"]
resource_name = "right_tilt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Collision/Head/Head_bob/Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.1, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Collision/Head/Head_bob/Camera:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.0174533)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jffl5"]
_data = {
"RESET": SubResource("Animation_dcj65"),
"left_tilt": SubResource("Animation_1aapa"),
"right_tilt": SubResource("Animation_vo3n4")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_nx22a")

[node name="Celling_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.454767, 0)
target_position = Vector3(0, 1.4, 0)
collision_mask = 5

[node name="Timer" type="Timer" parent="."]

[node name="Npc_areas" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, 0.3, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0mr4d")

[node name="Head" type="Node3D" parent="Collision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.74, 0)

[node name="Head_bob" type="Node3D" parent="Collision/Head"]

[node name="Camera" type="Camera3D" parent="Collision/Head/Head_bob"]
current = true
near = 0.001

[node name="Raycast" type="RayCast3D" parent="Collision/Head/Head_bob/Camera"]
target_position = Vector3(0, 0, -3)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="Steps" type="AudioStreamPlayer3D" parent="Collision/Head/Head_bob/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.74, 0)
stream = ExtResource("2_cwe81")

[node name="Crouch_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wcdns")
}

[node name="Walk_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_byuny")
}
playback_default_blend_time = 1.0

[node name="Tilt_animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Walk_animation")
libraries = {
"": SubResource("AnimationLibrary_jffl5")
}
playback_default_blend_time = 0.2
